--- a/CLIENT/pages/dashboard/dashboard.css
+++ b/CLIENT/pages/dashboard/dashboard.css
@@ -10,19 +10,15 @@
 
 .right-column {
     height: 100%;
+    width: 350px;
     padding: 0 10px;
     border-left: 2px solid var(--custom-gray-color-300);
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
+    gap: 2rem;
 
-    &.dashboard {
-        width: 350px;
-    }
-
-    &.discover {
-        width: 250px;
-    }
 }
 
 .dashboard-container {
@@ -78,7 +74,7 @@
 
     &.active {
         color:  #FFFFFF ;
-        border-bottom-color: #FF8A80;
+        border-bottom-color: #9277FF;
     }
 }
 
@@ -98,7 +94,7 @@
 .create-post-button {
     width: 225px;
     height: 50px;
-    background: var(--custom-pink-color-200);
+    background: var(--custom-purple-color-400);
     border-radius: 15px;
     align-self: center;
     margin-top: auto;
@@ -106,7 +102,7 @@
     font-size: 24px;
 
     &:hover {
-        background-color: var(--custom-pink-color-100);
+        background-color: var(--custom-purple-color-200);
     }
 }
 
@@ -544,7 +540,7 @@
     &.discover {
         padding: 10px;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: space-between;
         height: calc(100% - 115px);
     }
@@ -555,6 +551,13 @@
         flex-direction: column;
         height: calc(100% - 65px);
     }
+}
+
+.discover-container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    gap: 1rem;
 }
 
 .dashboard-post-card {
@@ -710,7 +713,7 @@
         border: none;
         width: auto;
         height: 100%;
-        color: var(--custom-pink-color-200);
+        color: var(--custom-purple-color-400);
         background: transparent;
         font-size: 18px;
         font-weight: normal;
@@ -823,7 +826,7 @@
     height: 40px;
     border-radius: 100px;
     padding: 0 25px;
-    background-color: var(--custom-pink-color-200);
+    background-color: var(--custom-purple-color-400);
     color: #0D0D0D;
     box-sizing: border-box;
     font-size: 16px;
@@ -842,7 +845,7 @@
 
     &.follow {
         border: none;
-        background-color: var(--custom-pink-color-200);
+        background-color: var(--custom-purple-color-400);
         color: #0D0D0D;
     }
 
@@ -889,7 +892,7 @@
 }
 
 .delete-button {
-    background: var(--custom-pink-color-200);
+    background: var(--custom-purple-color-400);
 }
 
 .random-tags-container {
@@ -897,9 +900,20 @@
     flex-direction: column;
     margin-top: 2rem;
     box-sizing: border-box;
+    gap: 1rem;
 
     h2 {
         font-size: 18px;
+    }
+
+    a {
+        text-decoration: none;
+        color: var(--custom-purple-color-400);
+        cursor: pointer;
+    }
+
+    a:hover {
+        text-decoration: underline;
     }
 }
 
@@ -910,3 +924,126 @@
     }
 }
 
+.tag-suggestion-card {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    border: none;
+    border-radius: 2px;
+
+    button {
+        width: 25%;
+        color: var(--custom-purple-color-400);
+        cursor: pointer;
+        border: none;
+        background: none;
+        font-size: 16px;
+        font-weight: normal;
+    }
+
+    button:hover {
+        text-decoration: underline;
+    }
+
+    &:hover {
+        background-color: var(--custom-gray-color-300)
+    }
+}
+
+.tag-link-container {
+    width: 75%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    padding-left: 5px;
+    box-sizing: border-box;
+
+    a {
+        width: 100%;
+        height: 100%;
+        text-decoration: none;
+        color: var(--custom-white-color-100);
+        display: flex;
+        align-items: center;
+    }
+}
+
+.popular-tags-container {
+    display: flex;
+    box-sizing: border-box;
+    margin-bottom: 2rem;
+}
+
+.two-popular-tags-container {
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    height: 200px;
+    box-sizing: border-box;
+    padding: 5px;
+    gap: 5px;
+}
+
+.popular-tag-card {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    border-radius: 5px;
+    z-index: 4;
+    padding: 5px;
+    box-sizing: border-box;
+
+    a {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        text-decoration: none;
+        z-index: 2;
+    }
+
+    .smoke-effect {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,0.6);
+        border-radius: 5px;
+        z-index: 1;
+        top: 0;
+    }
+}
+
+.number-with-name {
+    display: flex;
+    margin-right: auto;
+    gap: 6px;
+    position: relative;
+    align-items: center;
+    justify-content: start;
+    z-index: 3;
+    font-weight: bold;
+
+    .number {
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        margin: 0;
+        padding: 0;
+        font-size: 16px;
+        color: black;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+.total-uses {
+    margin-left: auto;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    z-index: 3;
+}
