--- a/index.css
+++ b/index.css
@@ -206,7 +206,7 @@
         }
 
         &:hover {
-            background-color: var(--custom-gray-color-200);
+            background-color: var(--custom-gray-color-300);
         }
     }
 }
@@ -267,7 +267,7 @@
     }
 
     &:focus-within  {
-        border-color: var(--custom-pink-color-200);
+        border-color: var(--custom-purple-color-400);
     }
 }
 
@@ -293,6 +293,8 @@ h1 {
     width: 49%;
     height: auto;
     gap: 1rem;
+    padding: 10px 0;
+    box-sizing: border-box;
 }
 
 .discover-post-card {
@@ -697,7 +699,7 @@ h1 {
 
     &.active {
         color: var(--custom-black-color-100);
-        background: var(--custom-pink-color-200);
+        background: var(--custom-purple-color-400);
     }
 }
 
@@ -734,7 +736,7 @@ h1 {
     color: var(--custom-gray-color-700);
 
     &.available {
-        color: var(--custom-pink-color-200);
+        color: var(--custom-purple-color-400);
     }
 }
 
@@ -814,8 +816,8 @@ h1 {
     justify-content: center;
     height: 40px;
     width: 40px;
-    border: 3px solid var(--custom-purple-color-50);
-    color: var(--custom-purple-color-50);
+    border: 3px solid var(--custom-purple-color-200);
+    color: var(--custom-purple-color-200);
     border-radius: 50%;
     background: transparent;
     box-sizing: border-box;
@@ -831,7 +833,7 @@ h1 {
     }
 
     &:hover {
-        background: var(--custom-purple-color-50);
+        background: var(--custom-purple-color-200);
         color: var(--custom-white-color-100);
         border-color: var(--custom-white-color-100);
     }
