--- a/index.css
+++ b/index.css
@@ -120,7 +120,7 @@
     align-content: center;
     padding: 15px;
     box-sizing: border-box;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.8);
     font-family: "Montserrat", serif;
     overflow-y: auto;
 }
@@ -1002,4 +1002,24 @@ h1 {
 }
 .pagination-number:hover {
     transform: scale(1.1);
+}
+
+.pagination-footer {
+    width: 100%;
+    height: 65px;
+    display: flex;
+    flex-direction: row;
+    box-sizing: border-box;
+    border-top: 2px solid var(--custom-gray-color-300);
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+
+    &.hidden {
+        display: none;
+    }
+
+    &.visible {
+        display: flex;
+    }
 }
