--- a/CLIENT/pages/tags/tagsForm.css
+++ b/CLIENT/pages/tags/tagsForm.css
@@ -8,7 +8,7 @@
     position: fixed;
     width: 575px;
     height: auto;
-    border: 4px solid var(--custom-gray-color-300);
+    border: 2px solid var(--custom-purple-color-400);
     border-radius: 10px;
     padding: 15px;
     box-sizing: border-box;
@@ -25,7 +25,7 @@
         background-color: var(--custom-gray-color-100) !important;
 
         &:focus {
-            border-color: var(--custom-gray-color-500) !important;
+            border-color: var(--custom-purple-color-400) !important;
         }
 
         &::placeholder {
@@ -53,24 +53,7 @@
     input[type="checkbox"] {
         height: 25px;
         width: 25px;
-        accent-color: var(--custom-gray-color-500);
-    }
-}
-
-.select-container {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-
-    select {
-        width: 200px;
-        height: 35px;
-        background-color: transparent;
-        border: 2px solid var(--custom-gray-color-500);
-        border-radius: 5px;
-        color: white;
-        font-weight: bold;
-        text-transform: uppercase;
+        accent-color: var(--custom-purple-color-400);
     }
 }
 
@@ -109,7 +92,7 @@
     width: 100%;
     height: 400px;
     border-radius: 10px;
-    border: solid 2px var(--custom-gray-color-500);
+    border: solid 2px var(--custom-purple-color-400);
 }
 
 .tag-cover-display {
@@ -127,8 +110,8 @@
 
 .submit-button {
     &:enabled {
-        color: var(--custom-black-color-100) !important;
-        background-color: white;
+        color: var(--custom-white-color-100) !important;
+        background-color: var(--custom-purple-color-400) !important;
     }
 
     &:disabled {
